@@ -53,11 +53,11 @@ public class GlueFactory {
 		if (codeSource!=null && codeSource.trim().length()>0) {
 			Class<?> clazz = getCodeSourceClass(codeSource);
 			if (clazz != null) {
-				Object instance = clazz.newInstance();
+				Object instance = clazz.getDeclaredConstructor().newInstance();
 				if (instance!=null) {
-					if (instance instanceof IJobHandler) {
+					if (instance instanceof IJobHandler handler) {
 						this.injectService(instance);
-						return (IJobHandler) instance;
+						return handler;
 					} else {
 						throw new IllegalArgumentException(">>>>>>>>>>> xxl-glue, loadNewInstance error, "
 								+ "cannot convert from instance["+ instance.getClass() +"] to IJobHandler");
